Version 0.6.2 -- Subversion
-----------------

* Added dateformat parameter to News
* Added showtemplate parameter to moduleinterface.php, so you can do things
like show just an RSS feed and nothing else.
* Fixed a bug with html entities not getting converted properly after preview
or saved. (Fixes #62, #65)

Version 0.6.1 -- Tue Sep 14 2004
-----------------

* Added section header content type
* Added cms_selflink plugin
* Added some functionality to the News module (make sure you upgrade it)
* Added Dutch translation (Thijs)
* Changed login and logout to work properly in IIS (Fixes #60)
* Fixed a bug with view page in listcontent (Fixes #61)
* Fixed so only content pages can be set as default (Fixes #59)
* Started moving code to an easy object oriented design
* Updated smarty to 2.6.5

Version 0.6 -- Wed Sep 01 2004
-----------------

* Added User Defined Tags (user defined php code editable in the admin)
* Added advanced CSS management for doing CSS in chunks instead of entirely
in the template
* Added Finnish translation
* Added user defined 404 messages
* Added site down message
* Added site preferences page
* Added head tags field for putting text into the <head> tag
* Changed layout of add and edit content pages to make for less scrolling
* More changes to the admin site look
* Removed gettext and instead are using a homegrown system with less weird
dependencies and is easier to create new translations

Version 0.5.1 -- Wed Aug 25 2004
-----------------

* Added assume_mod_rewrite to config if using the .htaccess and mod_rewrite
functionality
* Added automatic aliases option
* Added character map to the WYSIWYG
* Added collapsable help blurbs to some admin pages
* Fixed upgrade path from 0.1 through to 0.5.1
* Fixed up the admin stylesheet so it's more cross-browser friendly
* Fixed a bug with PATH_INFO
* Fixed a bug with Call-time pass-by-reference Warning
* Re-added phplayers-menu.css : users should however move its content to their
template.
