@@ -1,0 +1,194 @@
+<?php
+$lang['admin']['CSS'] = 'CSS'; //needs translation
+$lang['admin']['about'] = '壽衾';
+$lang['admin']['action'] = '雄釬';
+$lang['admin']['active'] = '魂雄腔';
+$lang['admin']['addcontent'] = '崝樓陔腔囀';
+$lang['admin']['addcss'] = '崝樓陔腔CSS';
+$lang['admin']['addcssassociations'] = '崝樓CSS壽薊';
+$lang['admin']['addgroup'] = '崝樓陔腔郪';
+$lang['admin']['additionaleditors'] = '鍚俋腔晤憮';
+$lang['admin']['addlink'] = '崝樓蟈諉';
+$lang['admin']['addseparator'] = '崝樓煦路睫';
+$lang['admin']['addtemplate'] = '崝樓陔腔耀啣';
+$lang['admin']['adduser'] = '崝樓陔蚚誧';
+$lang['admin']['addusertag'] = '崝樓蚚誧赻隅砱梓';
+$lang['admin']['adminlog'] = '奪燴祩';
+$lang['admin']['adminsystemtitle'] = 'CMS奪燴炵苀';
+$lang['admin']['advanced'] = '詢撰';
+$lang['admin']['aliasalreadyused'] = '梗靡眒婓鍚珨珜妏蚚';
+$lang['admin']['aliasmustbelettersandnumbers'] = '梗靡硐夔岆趼譫睿杅趼';
+$lang['admin']['aliasnotaninteger'] = '梗靡祥夔窒岆杅趼';
+$lang['admin']['assignments'] = '董硉';
+$lang['admin']['associationexists'] = '涴跺壽薊眒冪湔婓';
+$lang['admin']['backtoplugins'] = '隙善脣璃蹈桶';
+$lang['admin']['cancel'] = '秏';
+$lang['admin']['clearadminlog'] = '壺奪燴祩';
+$lang['admin']['code'] = '測鎢';
+$lang['admin']['confirmdefault'] = '斕隅猁扢离桴萸腔蘇珜鎘ˋ';
+$lang['admin']['confirmdeletedir'] = '斕隅猁刉壺森醴翹睿爵醱腔垀衄囀鎘ˋ';
+$lang['admin']['content'] = '囀';
+$lang['admin']['contentmanagement'] = '囀奪燴';
+$lang['admin']['contenttype'] = '囀濬梗';
+$lang['admin']['copy'] = '葩秶';
+$lang['admin']['copytemplate'] = '葩秶耀啣';
+$lang['admin']['create'] = '斐膘';
+$lang['admin']['createnewfolder'] = '斐膘陔腔恅璃標';
+$lang['admin']['cssalreadyused'] = 'CSS靡備眒掩妏蚚';
+$lang['admin']['cssmanagement'] = 'CSS奪燴';
+$lang['admin']['currentassociations'] = '絞壽薊';
+$lang['admin']['currentcss'] = '絞CSS';
+$lang['admin']['currentdirectory'] = '絞醴翹';
+$lang['admin']['currentgroups'] = '絞郪';
+$lang['admin']['currentpages'] = '絞珜';
+$lang['admin']['currenttemplates'] = '絞耀啣';
+$lang['admin']['currentusers'] = '絞蚚誧';
+$lang['admin']['custom404'] = '赻隅砱404渣昫陓洘';
+$lang['admin']['database'] = '杅擂踱';
+$lang['admin']['databaseprefix'] = '杅擂踱袟';
+$lang['admin']['databasetype'] = '杅擂踱濬倰';
+$lang['admin']['date'] = '';
+$lang['admin']['default'] = '蘇';
+$lang['admin']['delete'] = '刉壺';
+$lang['admin']['deleteconfirm'] = '斕隅猁刉壺鎘ˋ';
+$lang['admin']['deletecss'] = '刉壺CSS';
+$lang['admin']['directoryexists'] = '森醴翹眒冪湔婓';
+$lang['admin']['down'] = '砃狟';
+$lang['admin']['edit'] = '晤憮';
+$lang['admin']['editconfiguration'] = '晤憮賦凳';
+$lang['admin']['editcontent'] = '晤憮囀';
+$lang['admin']['editcss'] = '晤憮CSS';
+$lang['admin']['editgroup'] = '晤憮郪';
+$lang['admin']['editlink'] = '晤憮蟈諉';
+$lang['admin']['editpage'] = '晤憮珜醱';
+$lang['admin']['editseparator'] = '晤憮煦路睫';
+$lang['admin']['edittemplate'] = '晤憮耀啣';
+$lang['admin']['edituser'] = '晤憮蚚誧';
+$lang['admin']['editusertag'] = '晤憮蚚誧赻隅砱梓';
+$lang['admin']['errorchildcontent'] = '醴翹囀衄赽醴翹ㄛ忑珂刉壺坳蠅';
+$lang['admin']['errorcopyingtemplate'] = '葩秶耀啣渣昫';
+$lang['admin']['errorcreatingassociation'] = '斐膘壽薊渣昫';
+$lang['admin']['errorcssinuse'] = '森CSS掩耀啣麼珜醱妏蚚ㄛ忑珂刉壺涴虳壽薊﹝';
+$lang['admin']['errordefaultpage'] = '拸楊刉壺絞蘇珜ㄛ忑珂扢离珨跺祥肮腔蘇珜﹝';
+$lang['admin']['errordeletingassociation'] = '刉壺壽薊渣昫';
+$lang['admin']['errordeletingcss'] = '刉壺CSS渣昫';
+$lang['admin']['errordeletingdirectory'] = '拸楊刉壺醴翹﹝岆瘁衄眈壽癹ˋ';
+$lang['admin']['errordeletingfile'] = '拸楊刉壺恅璃﹝岆瘁衄眈壽癹ˋ';
+$lang['admin']['errorgettingcssname'] = '黍CSS靡備渣昫';
+$lang['admin']['errorgettingtemplatename'] = '黍耀啣靡備渣昫';
+$lang['admin']['errorinsertingcss'] = '脣CSS渣昫';
+$lang['admin']['errorinsertinggroup'] = '脣郪渣昫';
+$lang['admin']['errorinsertingpage'] = '脣珜渣昫';
+$lang['admin']['errorinsertingtag'] = '脣蚚誧梓渣昫';
+$lang['admin']['errorinsertingtemplate'] = '脣耀啣渣昫';
+$lang['admin']['errorinsertinguser'] = '脣蚚誧渣昫';
+$lang['admin']['errorretrievingcss'] = '脣CSS渣昫';
+$lang['admin']['errorretrievingtemplate'] = '潰坰耀啣渣昫';
+$lang['admin']['errortemplateinuse'] = '蜆耀啣掩珜醱妏蚚ㄛ忑珂痄壺坳﹝';
+$lang['admin']['errorupdatingcontent'] = '載陔囀渣昫';
+$lang['admin']['errorupdatingcss'] = '載陔CSS渣昫';
+$lang['admin']['errorupdatinggroup'] = '載陔郪渣昫';
+$lang['admin']['errorupdatingtemplate'] = '載陔耀啣渣昫';
+$lang['admin']['errorupdatinguser'] = '載陔蚚誧渣昫';
+$lang['admin']['errorupdatingusertag'] = '載陔蚚誧梓渣昫';
+$lang['admin']['erroruserinuse'] = '森蚚誧茧衄囀珜ㄛ婓刉壺蔚垀衄蜊峈鍚珨蚚誧';
+$lang['admin']['errrochildcontent'] = '拸楊刉壺湍衄狟珨撰囀腔珜醱ㄛ忑珂痄壺狟珨撰囀'; //needs translation
+$lang['admin']['false'] = '渣昫腔';
+$lang['admin']['filecreatedirnodoubledot'] = '醴翹祥夔婦漪\'..\' ﹝';
+$lang['admin']['filecreatedirnoname'] = '祥夔斐膘諾靡趼腔醴翹﹝';
+$lang['admin']['filecreatedirnoslash'] = '醴翹祥夔婦漪\'/\'麼氪\'\\\' ﹝';
+$lang['admin']['filemanagement'] = '恅璃奪燴';
+$lang['admin']['filename'] = '恅璃靡';
+$lang['admin']['filenotuploaded'] = '拸楊奻換恅璃﹝岆瘁衄眈壽癹ˋ';
+$lang['admin']['filesize'] = '恅璃湮苤';
+$lang['admin']['groupmanagement'] = '郪奪燴';
+$lang['admin']['headtags'] = '恅璃芛';
+$lang['admin']['help'] = '堆翑';
+$lang['admin']['helpaddcontent'] = '<p>蜆珜埰勍斕斐膘陔腔醴翹﹝恁寁珨跺醴翹濬倰甜沓斛剒腔陓洘撈褫斐膘陔腔囀﹝彆斕恁寁婓粕等笢珆尨ㄛ甜妏蚚賸赻雄粕等馱撿{dhtmlmenu}麼氪{bulletmenu}ㄛ饒繫陔腔醴翹蔚頗婓粕等笢赻雄珆尨堤懂﹝</p><p>斕褫眕婓蚚誧奪燴笢籵徹晤憮斕腔蚚誧峈WYSIWYG晤憮扢离斕腔忑恁砐﹝峈滅砦堤渣ㄛ斕褫眕斐膘葩磁醴翹ㄛ麼氪潠等腔植鍚珨跺桴萸笢眒衄腔醴翹爵熟睿梜泂﹝</p>';
+$lang['admin']['helpaddtemplate'] = '<p>耀啣岆諷秶斕腔桴萸醴翹腔俋夤睿虴彆腔﹝</p><p>婓森斐膘斕腔珜醱票擁甜婓瑞跡芞桶笢氝樓斕腔CSS眕諷秶斕腔祥肮窒煦腔俋夤﹝</p>';
+$lang['admin']['helpeditcontent'] = '<p>蜆珜埰勍斕党蜊斕腔珜醱絞腔醴翹ㄛ蚚衾汜傖粕等腔奻珨撰醴翹﹝斕珩褫眕党蜊粕等爵絞珆尨腔恅趼ㄛ珜醱腔梓枙ㄛ党蜊垀衄氪ㄛ甜峈垀恁腔醴翹煦饜鍚俋腔晤憮﹝</p><p>彆斕恁寁妏蚚珜醱梗靡ㄛ眕珜醱梗靡測杸囀窒珜醱ID瘍鎢釬峈統杅ㄛ蔚妏腕蚕粕等赻雄汜傖腔蟈諉載樓眢黍﹝</p>';
+$lang['admin']['helplistcontent'] = '<p>涴岆翋醴翹珜ㄛ釬峈晤憮垀衄醴翹腔場宎萸﹝<br>蜆珜埰勍斕籵徹妏蚚赻雄粕等炵苀笭陔假齬斕腔醴翹脹撰ㄛ眕摯刉壺﹜晤憮睿斐膘陔腔醴翹﹝</p><p>婓<i>Default</i>戲爵萸僻<u>False</u>蟈諉蔚珜醱扢离峈蘇珜ㄗ絞梑祥善垀猁腔珜醱奀憩頗珆尨蜆珜ㄘ﹝</p>';
+$lang['admin']['helplisttemplate'] = '<p>蜆珜埰勍斕晤憮﹜刉壺睿斐膘耀啣﹝</p><p>萸僻<u>Add New Template</u>偌聽斐膘陔腔耀啣﹝</p><p>彆斕洷咡垀衄腔醴翹珜醱飲妏蚚肮珨跺耀啣ㄛ萸僻 <u>Set All Content</u>蟈諉</p><p>彆斕洷咡葩秶珨跺耀啣ㄛ萸僻<u>Copy</u>芞梓ㄛ蔚頗枑尨斕峈陔葩秶腔耀啣韜靡﹝</p>';
+$lang['admin']['hostname'] = '翋儂靡';
+$lang['admin']['idnotvalid'] = '垀跤腔ID祥湔婓';
+$lang['admin']['informationmissing'] = '屾陓洘';
+$lang['admin']['install'] = '假蚾';
+$lang['admin']['invalidcode'] = '怀腔測鎢拸虴';
+$lang['admin']['invalidtemplate'] = '耀啣祥湔婓';
+$lang['admin']['itemid'] = '沭遴ID';
+$lang['admin']['itemname'] = '沭遴靡備';
+$lang['admin']['language'] = '逄晟';
+$lang['admin']['logout'] = '蛁种';
+$lang['admin']['menutext'] = '粕等恅掛';
+$lang['admin']['missingparams'] = '屾議虳統杅麼統杅拸虴';
+$lang['admin']['modifygroupassignments'] = '党蜊郪董硉';
+$lang['admin']['moduleabout'] = '壽衾%s耀輸';
+$lang['admin']['modulehelp'] = '%s耀輸腔堆翑';
+$lang['admin']['moduleinterface'] = '%s賜醱';
+$lang['admin']['modules'] = '耀輸';
+$lang['admin']['move'] = '痄雄';
+$lang['admin']['name'] = '靡備';
+$lang['admin']['needpermissionto'] = '斕剒猁\'%s\'勍褫懂硒俴森髡夔 ';
+$lang['admin']['newtemplatename'] = '陔腔耀啣靡備';
+$lang['admin']['next'] = '狟珨祭';
+$lang['admin']['noaccessto'] = '羶衄%s腔諳';
+$lang['admin']['nocss'] = '羶衄CSS';
+$lang['admin']['noentries'] = '羶衄諳';
+$lang['admin']['nofieldgiven'] = '羶衄硌隅%sㄐ';
+$lang['admin']['nofiles'] = '羶衄恅璃';
+$lang['admin']['nopasswordmatch'] = '躇鎢祥淏';
+$lang['admin']['norealdirectory'] = '羶衄硌隅醴翹';
+$lang['admin']['norealfile'] = '羶衄硌隅恅璃';
+$lang['admin']['notinstalled'] = '羶衄假蚾';
+$lang['admin']['owner'] = '茧衄氪';
+$lang['admin']['pagealias'] = '珜醱梗靡';
+$lang['admin']['parent'] = '埭';
+$lang['admin']['password'] = '躇鎢';
+$lang['admin']['passwordagain'] = '躇鎢ㄗ笭葩ㄘ';
+$lang['admin']['permission'] = '勍褫';
+$lang['admin']['permissions'] = '勍褫';
+$lang['admin']['permissionsforgroup'] = '%s郪腔勍褫';
+$lang['admin']['pluginabout'] = '壽衾%s梓';
+$lang['admin']['pluginhelp'] = '%s梓腔堆翑';
+$lang['admin']['pluginmanagement'] = '脣璃奪燴';
+$lang['admin']['preview'] = '啎擬';
+$lang['admin']['previous'] = '奻珨祭';
+$lang['admin']['removecssassociation'] = '刉壺CSS壽薊';
+$lang['admin']['saveconfig'] = '悵湔饜离';
+$lang['admin']['send'] = '楷冞';
+$lang['admin']['setallcontent'] = '扢离垀衄珜醱';
+$lang['admin']['setallcontentconfirm'] = '斕隅猁妏蚚蜆耀啣扢离垀衄珜醱鎘ˋ';
+$lang['admin']['showinmenu'] = '婓粕等笢珆尨';
+$lang['admin']['showsite'] = '珆尨桴萸';
+$lang['admin']['sitedownmessage'] = '桴萸壽敕陓洘';
+$lang['admin']['siteprefs'] = '桴萸統杅恁寁';
+$lang['admin']['status'] = '袨怓';
+$lang['admin']['stylesheet'] = '瑞跡芞桶';
+$lang['admin']['submit'] = '枑蝠';
+$lang['admin']['tags'] = '梓';
+$lang['admin']['template'] = '耀啣';
+$lang['admin']['templateexists'] = '耀啣靡備眒湔婓';
+$lang['admin']['templatemanagement'] = '耀啣奪燴';
+$lang['admin']['title'] = '梓枙';
+$lang['admin']['tools'] = '馱撿';
+$lang['admin']['true'] = '淏腔';
+$lang['admin']['type'] = '濬梗';
+$lang['admin']['typenotvalid'] = '濬梗祥湔婓';
+$lang['admin']['uninstall'] = '迠婥';
+$lang['admin']['uninstallconfirm'] = '斕隅猁迠婥鎘ˋ';
+$lang['admin']['up'] = '砃奻';
+$lang['admin']['uploadfile'] = '奻換恅璃';
+$lang['admin']['url'] = 'URL';
+$lang['admin']['useadvancedcss'] = '妏蚚詢撰CSS奪燴';
+$lang['admin']['user'] = '蚚誧';
+$lang['admin']['usermanagement'] = '蚚誧奪燴';
+$lang['admin']['username'] = '蚚誧靡';
+$lang['admin']['usernameincorrect'] = '蚚誧靡麼躇鎢渣昫';
+$lang['admin']['userprefs'] = '蚚誧統杅';
+$lang['admin']['usersassignedtogroup'] = '蚚誧硌隅善%s郪';
+$lang['admin']['usertagexists'] = '妏蚚森靡備腔脣璃眒湔婓ㄛ恁寁鍚珨跺﹝'; //needs translation
+$lang['admin']['usewysiwyg'] = '峈囀妏蚚WYSIWYG晤憮';
+$lang['admin']['version'] = '唳掛';
+$lang['admin']['view'] = '銡擬';
+$lang['admin']['welcomemsg'] = '辣茩%s';
+?>
